# minecraft-server-launcher

./: .gitignore  .golangci.yml  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
benches/backup/: backup_bench_test.go
benches/server/: server_bench_test.go
benches/utils/: go.mod  utils_bench_test.go  validation_bench_test.go
internal/backup/: backup.go  backup_bench_test.go  backup_test.go
internal/config/: config.go  config_test.go
internal/download/: download.go  download_test.go
internal/logger/: logger.go
internal/server/: server.go  server_bench_test.go  server_test.go
internal/update/: update.go  update_bench_test.go  update_test.go
internal/utils/: http.go  utils.go  utils_bench_test.go  utils_test.go  validation.go  validation_bench_test.go  validation_test.go
