[package]
name = "minecraft-server-launcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "minecraft_server_launcher"
path = "src/lib.rs"

[[bin]]
name = "paper-launcher"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
indicatif = "0.18"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
tempfile = "3.8"
zip = "0.6"

